--- a/scss/salecontainer.scss
+++ b/scss/salecontainer.scss
@@ -52,3 +52,19 @@
         }
     }
 }
+
+@media screen and (max-width: 960px) {
+    .salecontainer {
+        height: 600px;
+    
+    .left{
+        height: 600px;
+    }
+
+    .right{
+        .redsale{
+            height: 540px;
+        }
+    }
+    }
+  }
