--- a/scss/shoead.scss
+++ b/scss/shoead.scss
@@ -25,3 +25,16 @@
         }
     }
 }
+
+@media screen and (max-width: 960px) {
+    .shoead {
+    .callout{
+       .quote{
+       font-size: 60px;
+       margin-left: -200px;
+       }
+        }
+
+    }
+  }
+
