--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,3 +6,10 @@
 @import "containershoesimages.scss";
 @import "salecontainer.scss";
 @import "donateyourshoes.scss";
+@import "footer.scss";
+@import "browsecontainer.scss";
+@import "browsecontainergrouptwo.scss";
+@import "browsecontainergroupthree.scss";
+@import "browsecontainergroupfour.scss";
+@import "browsecontainergroupfive.scss";
+@import "backgroundcolorgallery";
