--- a/scss/donateyourshoes.scss
+++ b/scss/donateyourshoes.scss
@@ -23,6 +23,16 @@
             src: url(../fonts/Cabin/Cabin-VariableFont_wdth\,wght.ttf);
         }
    }
+
+        .donateshoesinfo{
+            font-size: 25px;
+            width: 85%;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            text-align: center;
+            color: bisque;
+        }
+
+
    
             .explorebutton{
             padding: 5px 20px; 
@@ -41,3 +51,9 @@
 }
     }
 }
+
+@media screen and (max-width: 960px) {
+    .donateyourshoes {
+        height: 600px;
+    }
+  }
